--- a/package.json
+++ b/package.json
@@ -57,5 +57,10 @@
     "vite": "^6.2.0",
     "vite-plugin-node-polyfills": "^0.24.0",
     "zod": "^3.25.76"
+  },
+  "scripts": {
+    "dev": "tsx server.ts",
+    "build": "vite build",
+    "start": "tsx server.ts"
   }
 }
